# voting_percentage_testing

./: .gitignore  app.py  coin_match_probability.py  gpt_version.ipynb  main.py  pyproject.toml  testing.ipynb  vote_probability.py
.github/workflows/: deploy-web.yml
tests/: test_coin_match_probability.py  test_vote_probability.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.test.tsx  App.tsx  index.css  math.test.ts  math.ts
